created tests for the '@Bridge' annotation classes